# SilkRift

./: .gitignore  .gitmodules  README.md  settings.gradle.kts
SilkRift/: build.gradle.kts
SilkRift/src/androidTest/java/eternal/future/silkrift/: ExampleInstrumentedTest.java
SilkRift/src/main/: AndroidManifest.xml
SilkRift/src/main/cpp/: CMakeLists.txt  silkrift.cpp
SilkRift/src/main/cpp/includes/: IORedirects.hpp  Log.hpp  MapsGhost.hpp  StealthCrashBypass.hpp  SysCallHook.hpp
SilkRift/src/main/cpp/src/: IORedirects.cpp  MapsGhost.cpp  StealthCrashBypass.cpp  SysCallHook.cpp
SilkRift/src/main/java/eternal/future/silkrift/: APKKiller.java  AppComponentFactoryStub.java  ApplicationReplacer.java  ApplicationStub.java  Core.java  IORedirects.java  MapsGhost.java  SignatureFaker.java
SilkRift/src/test/java/eternal/future/silkrift/: ExampleUnitTest.java
dome/: build.gradle.kts  test.jks
dome/src/androidTest/java/eternal/future/silkrift/dome/: ExampleInstrumentedTest.java
dome/src/main/: AndroidManifest.xml
dome/src/main/java/eternal/future/silkrift/dome/: MainActivity.java
dome/src/main/res/layout/: activity_main.xml
dome/src/main/res/values/: themes.xml
dome/src/main/res/values-night/: themes.xml
dome/src/test/java/eternal/future/silkrift/dome/: ExampleUnitTest.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
